[gd_scene load_steps=33 format=2]

[ext_resource path="res://Player/Camera.gd" type="Script" id=1]
[ext_resource path="res://Player/Cat.gd" type="Script" id=2]
[ext_resource path="res://art/crosshair1.png" type="Texture" id=3]
[ext_resource path="res://art/crosshair2 (1).png" type="Texture" id=4]
[ext_resource path="res://art/origonalcat.glb" type="PackedScene" id=5]
[ext_resource path="res://art/crosshairbodyhit.png" type="Texture" id=6]
[ext_resource path="res://art/crosshairheadhit.png" type="Texture" id=7]
[ext_resource path="res://fonts/Cocola.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://art/Key.png" type="Texture" id=9]
[ext_resource path="res://fonts/PauseMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://Audio/pop2.wav" type="AudioStream" id=11]
[ext_resource path="res://icon.png" type="Texture" id=12]
[ext_resource path="res://art/CrosshairX.png" type="Texture" id=13]
[ext_resource path="res://art/catAnimation4NLsDone.tscn" type="PackedScene" id=14]

[sub_resource type="CapsuleShape" id=19]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.470238, 0.979167, 1 )
colors = PoolColorArray( 0.799316, 0.799316, 0.799316, 1, 0, 1, 0.610352, 1, 0, 0, 0, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=5]
max_value = 2.0
_data = [ Vector2( 0, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=3]
direction = Vector3( 0, 0, -100 )
spread = 58.13
gravity = Vector3( 0, 2, 0 )
initial_velocity = 1.0
initial_velocity_random = 1.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 8 )

[sub_resource type="CapsuleMesh" id=4]
radius = 0.089
mid_height = 0.001
radial_segments = 50

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0, 0.21118, 0.509317, 0.944099 )
colors = PoolColorArray( 0, 0.123535, 0.0203881, 1, 0.0823529, 0.054902, 0.054902, 1, 0.0823529, 0.054902, 0.054902, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 15 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.414773 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
direction = Vector3( 0, 0, 0 )
spread = 27.66
flatness = 0.16
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.6
linear_accel = -2.0
scale = 0.26
scale_random = 0.39
scale_curve = SubResource( 12 )
color_ramp = SubResource( 10 )

[sub_resource type="CapsuleMesh" id=14]
radius = 0.1
mid_height = 0.001

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("camerapivot/SpringArm/Camera:fov")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10.0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Transition"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=18]
size = 38
font_data = ExtResource( 8 )

[node name="Cat" type="KinematicBody" groups=["Player", "TPable"]]
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.25, 0, 0, 0, 0.289178, 0, 0, 0, 0.25, 0, 0, 0 )
shape = SubResource( 19 )

[node name="origonalcat" parent="." instance=ExtResource( 5 )]
transform = Transform( -0.29989, 0, 0.008141, 0, 0.3, 0, -0.008141, 0, -0.29989, -0.015862, -0.264857, 0.210856 )
visible = false

[node name="catAnimation4NLsDone" parent="." instance=ExtResource( 14 )]
transform = Transform( -0.35, 0, -5.28485e-08, 0, 0.35, 0, 5.28485e-08, 0, -0.35, 0, -0.262824, -0.197613 )

[node name="camerapivot" type="Spatial" parent="."]

[node name="SpringArm" type="SpringArm" parent="camerapivot"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0.5, 0 )
spring_length = 2.0

[node name="Camera" type="Camera" parent="camerapivot/SpringArm"]
cull_mask = 1048063
fov = 10.0
far = 150.0

[node name="PickUP" type="RayCast" parent="camerapivot/SpringArm/Camera"]
transform = Transform( 1, 0, 0, 0, 0.989288, -0.14598, 0, 0.14598, 0.989288, 0, -0.191092, -1.3315 )
enabled = true
cast_to = Vector3( 0, 0, -4 )
debug_shape_custom_color = Color( 1, 0, 0, 1 )
debug_shape_thickness = 5.0

[node name="PickLoc" type="Position3D" parent="camerapivot/SpringArm/Camera"]
transform = Transform( 1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0.00232279, -0.0518771, -1.75697 )
visible = false

[node name="Sprite3D" type="Sprite3D" parent="camerapivot/SpringArm/Camera/PickLoc"]
transform = Transform( 0.2, 0, 0, 0, 0.2, -4.47034e-09, 0, 4.47034e-09, 0.2, 0, -0.975703, -2.3319 )
texture = ExtResource( 12 )

[node name="PickLoc2" type="Position3D" parent="camerapivot/SpringArm/Camera"]
transform = Transform( 1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0.00232279, 0.394849, -5.30264 )
visible = false

[node name="DashSprite" type="Sprite3D" parent="camerapivot/SpringArm/Camera"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, -7.981 )
visible = false
layers = 512
texture = ExtResource( 3 )

[node name="CrosshairNew" type="Sprite3D" parent="camerapivot/SpringArm/Camera"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, -7.887 )
layers = 512
texture = ExtResource( 4 )

[node name="CrosshairBody" type="Sprite3D" parent="camerapivot/SpringArm/Camera"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, -7.829 )
visible = false
layers = 512
texture = ExtResource( 6 )

[node name="CrosshairHead" type="Sprite3D" parent="camerapivot/SpringArm/Camera"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, -7.805 )
visible = false
layers = 512
texture = ExtResource( 7 )

[node name="CrosshairCantPICK" type="Sprite3D" parent="camerapivot/SpringArm/Camera"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -7.805 )
visible = false
layers = 512
texture = ExtResource( 13 )

[node name="eyes" type="Spatial" parent="camerapivot/SpringArm/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.219852, -0.362492 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
visible = false
modulate = Color( 0.643137, 0.643137, 0.643137, 0.341176 )
margin_left = 634.0
margin_top = 354.0
margin_right = 646.0
margin_bottom = 366.0
rect_min_size = Vector2( 12, 12 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="DashPart" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.366789, -0.455349 )
material_override = SubResource( 2 )
emitting = false
amount = 600
lifetime = 3.0
randomness = 1.0
visibility_aabb = AABB( -4, -2.92969, -4, 8, 8, 8 )
local_coords = false
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 4 )

[node name="SprintPart" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.228561, 0.164624 )
material_override = SubResource( 9 )
emitting = false
amount = 30
lifetime = 3.0
local_coords = false
process_material = SubResource( 13 )
draw_pass_1 = SubResource( 14 )

[node name="gun" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15462, -0.327653 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1280, 720 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport"]
cull_mask = 1048064
script = ExtResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000585016, -0.160378, 0.464592 )
enabled = true
collide_with_areas = true

[node name="RayCast4" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000585016, -0.160378, -0.171906 )
enabled = true
collide_with_areas = true

[node name="RayCast2" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.464592 )
enabled = true
cast_to = Vector3( 0, -0.4, 0 )
collide_with_areas = true

[node name="RayCast3" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.176845 )
enabled = true
cast_to = Vector3( 0, -0.4, 0 )
collide_with_areas = true

[node name="Transition" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 17 )
anims/Transition = SubResource( 16 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1279.0
margin_bottom = 721.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthText" type="Label" parent="."]
margin_left = 64.0
margin_top = 644.0
margin_right = 104.0
margin_bottom = 682.0
custom_fonts/font = SubResource( 18 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoubleJump" type="Label" parent="."]
margin_left = 142.0
margin_top = 644.0
margin_right = 182.0
margin_bottom = 682.0
custom_fonts/font = SubResource( 18 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Sprite" parent="."]
visible = false
position = Vector2( 228, 662 )
scale = Vector2( 1.525, 1.525 )
texture = ExtResource( 9 )

[node name="PauseMenu" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Shoot" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 11 )
unit_db = 13.196
